# public-configs

./: .emacs  .flake8  .gitconfig  .isort.cfg  .mypy.ini  .pylintrc  .xonshrc  flake8
.my-git/hooks/: fsmonitor-watchman  post-checkout
python-utils/docker/: pyproject.toml
python-utils/emacs/: pyproject.toml
python-utils/jupyter/: jupyter_notebook_config.py  pyproject.toml
python-utils/python-development/: pyproject.toml
python-utils/sshuttle/: pyproject.toml
python-utils/tensorboard/: pyproject.toml
python-utils/xonsh/: pyproject.toml
python-utils/youtube-dl/: pyproject.toml
