[tool.poetry]
name = "tiendil_emacs_utilities"
version = "0.1"
description = "Custom installation."
authors = ["Aliaksei Yaletski (Tiendil) <a.eletsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

astroid = "2.5.6"
pylint = "2.8.3"
flake8 = "3.9.2"
pyenchant = "3.2.0" # dictionaries for spelling checks