[tool.poetry]
name = "tiendil_jupyter_utilities"
version = "0.1"
description = "Custom installation."
authors = ["Aliaksei Yaletski (Tiendil) <a.eletsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

notebook = "^6.4"
jupyter_server_mathjax = "^0.2"
ipywidgets = "^7.6"

# docker images as kernels
dockernel = "^1"

sympy = "^1.8"
numpy = "^1.20"
matplotlib = "^3.4"
