[tool.poetry]
name = "tiendil_jupyter_utilities"
version = "0.1"
description = "Custom installation."
authors = ["Aliaksei Yaletski (Tiendil) <a.eletsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

notebook = "^6.4"
jupyter_server_mathjax = "^0.2"
ipywidgets = "^7.6"

# docker images as kernels
#dockernel = "^1"
# dockernel = { path = "/home/tiendil/repos/mine/dockernel", develop = true }

sympy = "^1.9"
numpy = "^1.21"
matplotlib = "^3.5"
