[tool.poetry]
name = "tiendil_jupyter_utilities"
version = "0.1"
description = "Custom installation."
authors = ["Aliaksei Yaletski (Tiendil) <a.eletsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"

notebook = "^7.0"
jupyter_server_mathjax = "^0.2"
ipywidgets = "^8.1"

# docker images as kernels
#dockernel = "^1"
# dockernel = { path = "/home/tiendil/repos/mine/dockernel", develop = true }

sympy = "^1.12"
numpy = "^1.26"
matplotlib = "^3.8"
